open-budget/app/styles/main.less
/* ... */
/////// HEADER ///////////

.site-nav {
  width: 100%;
  right: 0;
  top:0;
  z-index: 1000000;

  .navbar {
    margin-bottom: 0;
  }

  .navbar-brand {
    color: #222;
  }

  .navbar-nav > li > a {
    color: #555;
  }

  .navbar-left{
    margin-left: -10px;
    a.btn{
      margin: 8px 10px;
      padding: 6px 10px;
      //color: #fff;
      border-radius: 20px;
    }
  }

  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }


}

//////// SEARCH & TREE //////////////

#search-form{
  position: relative;
  margin-left: 0;
  padding: 10px 15px 10px 10px;
  //max-width: 600px;
  input, .btn-search{
    border-radius: 0;
    border: 0;
    border-bottom: 2px solid #cccccc;
    background: none;
    box-shadow: none;
    font-size: 20px;
  }
  .btn-search{
    padding: 2px 8px;
    color: #bbb;
    .glyphicon {
      //top: 3px;
    }
  }
  > div{
    margin-left: 75px;
    margin-right: 5px;
  }

  #btn-tree{
    position: absolute;
    top: 7px;
    left: 9px;
    width: 70px;
    height: 38px;
    text-indent: -99999px;
    overflow: hidden;
    display: block;
    padding: 0;
  }
}

#search-dropdown {

    visibility:hidden;

    &.active {
        border-bottom: 2px solid #ddd;
        .search-partition-layout {
            min-height: 400px;
        }
        .search-results {
            display: inherit;
        }
        visibility:visible;
    }

    .search-results {
        display: none;
        max-height: 400px;
        overflow: scroll;
    }

    .search-partition-layout {
        display: none;
        padding-left: 15px;
        min-height:0px;
        transition: min-height 0.5s;
        transition-timing-function:  cubic-bezier(0.175, 0.885, 0.32, 1.275);
        -webkit-transition: min-height 0.5s;

        font-size: 11px;

        g:hover {

            rect {
              opacity: 0.8;
              stroke-width: 2;
            }

            text {
              font-weight: bold;
            }
        }

        rect {
          stroke: @background;
          stroke-width: 0.5;

          &.parent {
              cursor: pointer;
          }
        }

        text {
          pointer-events: none;

          &.small-title {
              opacity: 0;
          }
        }
    }

    .search-dropdown-item {
        margin-right: 16px;
        line-height: 2.5em;
        max-height: 2.8em;
        overflow: hidden;

        border-bottom: 1px solid #ddd;
        &.selected {
            background: white;
            font-weight: bold;
        }
        &:hover {
            //background: white;
            color: darken(@text, 40%);
            cursor: pointer;
            font-weight: bold;
        }

        .item-title {
          display: inline-block;
          //font-weight: bold;
          font-size: 110%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          max-width: 100%;
        }

        .item-code {
          display: inline;
          font-size: 80%;
          padding-left: 10px;
          float: left;
        }
    }

}

/////// ARTICLE ///////////

article {

  &.six-fig{
    //margin-left: 72px;
  }

  background: #FFFFFF;
  //.box-shadow(-4px 2px 5px 0px rgba(0,0,0,0.10));
  margin: 10px 0;

  header {

    position: relative;
    top: 0;
    &.affix{
      top: 50px;
      height: 40px;
      z-index: 900000;
      width: 100%;
      right: 0;
      h1 {padding: 10px;font-size:18px;}
      .nav>li>a{padding:10px 15px 9px;font-size:15px;}
      #issue-num{font-size:20px;}
      transition: top 0.3s;
    }

    h1 {
      margin: 0 0 0 15px;
      font-size: 24px;
      padding: 15px;
      font-weight: bold;
    }

    .nav {
      font-size: 18px;
      border-bottom: 0;

      >li>a {
        padding: 17px 15px 15px;

        &.active{

        }
        &:hover{
          border-color: rgba(0,0,0,0);
        }
      }
    }
    #issue-num {
      position: absolute;
      left: 0px;
      top: 4px;
      direction: ltr;
      font-size: 36px;

      a {
        padding: 5px 0;
        //margin-right: -12px;
        //background: @lightgray;
        //.box-shadow(-4px 0px 5px 0px rgba(0,0,0,0.10));

        &.active, &.home {
          background: none;
        }

        &.home {.box-shadow(none);}
      }
    }
  }

  &.increased .current header {
    background: lighten(@increased, 40%);
    color: @increased;
    a {
      color: @increased;
    }
    .nav>li>a {
      color: lighten(@increased, 25%);
      &:hover{
        background: none;
      }
      &.active {
        background: lighten(@increased, 35%);
        border-radius: 0;
        border: 0;
      }
    }
  }
  &.decreased header {
    background: lighten(@increased, 40%);
  }

  ol.breadcrumb {
    .dropdown{
      &:hover{
        .dropdown-menu{
          display: block;
        }
      }
    }
  }

  .brief {
    color: @text;
    padding: 10px 80px;
    margin: 0;
    font-size: 20px;
    clear: both;
    p{

      margin: 0;
    }
  }

  h2 {
    margin: 0 0 20px;
    font-size: 18px;
    padding: 0 13px 5px;
    border-bottom: 1px solid @link;
    color: @link;
    display: inline-block;
    text-align: center;
  }
}



/* Custom page footer */
.footer {
    padding-top: 19px;
    color: #777;
    border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
    margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
    text-align: center;
    border-bottom: 1px solid #e5e5e5;
}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
    margin: 40px 0;
}

.marketing p + h4 {
    margin-top: 28px;
}

// VISUALIZTION ///////////////////////////////
#vis{
  text-align: center;
}

svg rect{
  shape-rendering:crispEdges;
}

@keyframes  dash-pong {
  to {stroke-dashoffset: 20;}
}
/* ... */

